--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   font-family: 'Poppins', sans-serif;
 }
 
+p {
+  margin-top: 15px;
+}
+
 .content {
   padding-top: 50px;
   padding-bottom: 50px;
@@ -92,5 +96,15 @@
 }
 
 .intro {
+  text-align: center;
+  font-size: 20px;
+}
 
+.intro a {
+  color: #f33;
+}
+
+.intro i {
+  color: #000;
+  font-size: 40px;
 }
