--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ p {
 .content {
   padding-top: 50px;
   padding-bottom: 50px;
+  text-align: center;
+}
+
+.content-black {
+  background: #383838;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+  color: #FFF;
 }
 
 .heading {
@@ -34,6 +43,20 @@ p {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.logo-circle {
+  border-radius: 50%;
+  background: #FFF;
+  height: 200px;
+  width: 200px;
+  padding: 30px;
+  overflow: hidden;
+  border: 4px solid #000;
+}
+
+.logo {
+  height: 150px;
 }
 
 /* Home Section */
@@ -104,7 +127,6 @@ p {
   color: #f33;
 }
 
-.intro i {
-  color: #000;
+.heading-icon {
   font-size: 50px;
 }
