--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ p {
   height: 150px;
 }
 
+.logo img {
+  margin-top: -5px;
+}
+
 h1, h2, h3, h4, h5 {
   font-family: 'Montserrat', sans-serif;
 }
