--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ h5 {
   font-size: 60px;
   font-weight: 600;
   margin-top: 0;
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
 }
 
 .home h2 {
@@ -102,7 +103,7 @@ h5 {
 }
 
 .home .overlay {
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0,0,0,0.45);
   height: 100vh;
   padding: 70px 0;
   font-family: 'Montserrat', sans-serif;
