--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ p {
   height: 300px;
 }
 
+.heading-about {
+  background-attachment: scroll;
+  height: 400px;
+}
+
 .heading h2 {
   color: #fff;
   height: inherit;
