--- a/style.css
+++ b/style.css
@@ -1,193 +1,113 @@
-/* Overall body structure */
-* {
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+body {
+    font-family: 'Source Sans Pro', sans-serif;
+    line-height: 1.6;
+    color: #333;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Prata', serif;
+    font-weight: 400; /* Prata's regular weight is already bold */ 
+  }
+  .header-section {
+    background-color: #f8f9fa;
+    padding: 80px 0 0; 
+  }
+  .header-section .container {
+    display: flex;
+    align-items: flex-start; 
+  }
+  .profile-info {
+    margin: auto 40px; 
+  }
+  .profile-image {
+    width: 200px; 
+    border-radius: 10px; 
+    object-fit: cover; 
+  }
+  .social-links {
+    margin-top: auto; 
+  }
+  .social-links a {
+    margin-right: 20px; 
+    font-size: 1.3rem;
+    padding: 5px 5px; /* Add some padding */
+    color: #555; 
+  }
+  .social-links a:hover {
+    color: #000; 
+    text-decoration: none; 
+    border-bottom: 2px solid #333; /* Add an underline */
+  }
+  .lead {
+    font-weight: 400;
+  }
+
+  .resume-link {
+    font-weight: 650; /* Make the text bolder */
+    padding: 5px 10px; /* Add some padding */ 
+    border-bottom: 2px solid #333; /* Add an underline */
+  }
+  
+  .resume-link:hover { /* Change styles on hover (optional) */
+    border-color: #181a1d; /* Change underline color */
+    text-decoration: none;
+  }
+
+  /* Make the name uppercase */
+  .profile-info h1 {
+    text-transform: uppercase;
+    letter-spacing: 1px; /* Add a bit of letter spacing */
+  }
+
+  .section-divider {
+    margin: 80px auto; /* Center the line horizontally */
+    border: 0;
+    border-top: 5px solid #6c757d; /* Darker grey color, 5px width */
+    width: 100%; /* Initial width - will be adjusted by the container */
+  }
+  .content .section-title {
+      margin-bottom: 0; /* Remove default bottom margin */
+  }
+  .content h2 {
+      display: inline;
+  }
+
+  .content p {
+      display: inline;
+      font-size: 1.25rem;
+      margin-top: 0;  /* Remove default top margin */ 
+  }
+
+  .work-entry {
+      margin: 40px 0; 
+  }
+  .work-logo {
+      max-width: 180px; /* Adjust max width as needed */
+      max-height: 180px; /* Adjust max height as needed */
+  }
+  .media-coverage {
+      margin-bottom: 10px;
+  }
+  .media-coverage a {
+      color: #555; 
+      text-decoration: underline;
+  }
+
+  .citation {
+      margin-bottom: 10px; 
+  }
+
+  .citation a { /* Style the link icon */
+  color: #333; /* Match your default text color */
+  text-decoration: none; 
+  margin-right: 5px; /* Add spacing between icon and text */
 }
 
-p {
-  margin-top: 15px;
+.row {
+    margin-top: 40px;
 }
 
-.intro {
-  text-align: center;
-  font-size: 20px;
-  line-height: 1.65;
-}
+.engagement-logo {
+    max-width: 170px; /* Adjust logo size as needed */
+    margin-bottom: 20px;
+  }
 
-.intro a {
-  color: #f33;
-}
-
-footer a {
-  -webkit-transition: color 0.5s;
-  transition: color 0.5s;
-  color: #3e3d3d;
-}
-
-footer a:hover {
-  text-decoration: none;
-  color: #0a57a9;
-}
-
-.content {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
-}
-
-.content-black {
-  background: #383838;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
-  color: #FFF;
-}
-
-.content-black a {
-  color: #FFF;
-  text-decoration: underline;
-}
-
-.heading {
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  text-align: center;
-  overflow: hidden;
-  height: 300px;
-}
-
-.heading-about {
-  background-attachment: scroll;
-  height: 500px;
-}
-
-.heading h2 {
-  color: #fff;
-  height: inherit;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
-  font-size: 40px;
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
-  padding: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.logo-circle {
-  border-radius: 50%;
-  background: #FFF;
-  height: 200px;
-  width: 200px;
-  margin: 30px auto;
-  padding: 30px;
-  overflow: hidden;
-  border: 5px solid #6d6d6d;
-  -webkit-transition: border 0.5s;
-  transition: border 0.5s;
-}
-
-.logo-circle:hover {
-  border: 5px solid #000;
-}
-
-.logo {
-  height: 150px;
-}
-
-h1, h2, h3, h4, h5 {
-  font-family: 'Montserrat', sans-serif;
-}
-
-h3 {
-  font-size: 1.5rem;
-}
-
-h5 {
-  color: #807e7e;
-}
-
-/* Home Section */
-.home h1 {
-  font-size: 50px;
-  font-weight: 600;
-  margin-top: 0;
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
-}
-
-.home h2 {
-  font-size: 40px;
-  font-weight: 300;
-}
-
-.home h5 {
-  margin-top: 2rem;
-  color: #FFF;
-}
-
-.home {
-  background-image: url('img/bg5.jpg');
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  text-align: center;
-  overflow: hidden;
-  height: 100vh;
-}
-
-.home .overlay {
-  background-color: rgba(0,0,0,0.45);
-  height: 100vh;
-  padding: 70px 0;
-  font-family: 'Montserrat', sans-serif;
-  color: #FFF;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-}
-
-@keyframes godown {
-  from {bottom: 40px;}
-  to {bottom: 20px;}
-}
-
-.overlay i {
-  position: absolute;
-  bottom: 20px;
-  font-size: 3rem;
-  animation-name: godown;
-  animation-duration: 1s;
-}
-
-.home .typed {
-  color: #f33;
-}
-
-.buttons {
-  margin-top: 30px;
-}
-
-.top-button {
-  border: #f33 solid 2px;
-  background-color: #f33;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-}
-
-.top-button:hover {
-  background-color: transparent;
-  text-decoration: none;
-  color: #fff;
-}
-
-.heading-icon {
-  font-size: 60px;
-}
